--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Necakco | Website</title>
+        <title>DumMix | Website</title>
     </head>
     <body>
         <div class="content">
@@ -18,7 +18,7 @@
                 </button>
             </div>
             <h1 class="title">
-                Necakco - real
+                DumMix
                 <div class="aurora">
                     <div class="aurora__item"></div>
                     <div class="aurora__item"></div>
@@ -28,7 +28,7 @@
             </h1>
             <p class="subtitle">Random Guy.</p>
             <a href="https://github.com/frenda-r">
-                <button class="button1">click here</button>
+                <button class="button1">Nhán Vào</button>
             </a>
         </div>
         <style>
